# TMR

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_GUIDE.md  MANUAL_PBIX_CREATION.md  QA-Pipeline-Report.pbit  QA-Pipeline-Report.pbix  QA_PIPELINE_MODEL_REFERENCE.md  README.md  SAVE_AND_USE_PBIX.md  TMR.pbix  build_cxo_dashboard.ps1  build_pbix.ps1  create_pbix.py  docker-compose.yml  make_pbit.py  pbixproj.bim  pyproject.toml  save_com.ps1  save_pbix.ps1  save_pbix_python.py  save_pbix_v2.ps1  save_simple.ps1
.claude/: settings.json
config/: custom_field_map.json
docker/: .env.docker  create_databases.sql  entrypoint.sh
docs/: powerbi-design-guide.md
docs/how-to/: 01-add-jira-project.md  02-map-custom-fields.md  03-run-pipeline-manually.md  04-reset-watermark.md  05-add-powerbi-page.md  06-manage-rls-users.md  07-troubleshoot-pipeline.md  08-build-powerbi-dashboard-pages.md  09-build-p1-dashboard.md  10-recover-corrupt-pbix.md  11-p1-recovery-checklist.md  12-canvas-build-guide.md  13-jira-xray-field-guardrails.md  14-jira-xray-metrics-guardrails-poster.md  15-jira-xray-guardrails-poster-a4.md
docs/reference/: implementation-guide.md  (+2 more)
pbixproj/: .pbixproj.json  ReportMetadata.json
scripts/: build_p1_layout.py  init_db.sql  init_reporting_db.sql  init_staging_db.sql  seed_dim_date.py  tmdl_to_bim.py  upgrade_reporting_db.sql  verify_layout.py
tests/: conftest.py  test_alerter.py  test_cf_mapper.py  test_client.py  test_db_connection.py  test_jira_extractor.py  test_seed_dim_date.py  test_staging_writer.py  test_transformer.py  test_xray_extractor.py
(+70 files in other folders)
