[project]
name = "qa-pipeline"
version = "1.0.0"
description = "Jira/Xray QA Metrics pipeline → SQL Server → Power BI"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyodbc>=5.1",
    "APScheduler>=3.10,<4",
    "SQLAlchemy>=2.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
qa-full-load  = "qa_pipeline.scripts.run_full_load:main"
qa-delta      = "qa_pipeline.scripts.run_delta:main"
qa-scheduler  = "qa_pipeline.scheduler.scheduler:run_scheduler"
qa-seed-dates  = "qa_pipeline.scripts.seed_dim_date:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qa_pipeline"]

[tool.ruff]
line-length    = 100
target-version = "py311"
select         = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict         = true
plugins        = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers   = ["integration: requires live DB or API credentials (deselect with -m 'not integration')"]
